# blog-articles-rag

./: .env.example  .gitignore  README.md  config.json  pyproject.toml
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/pages/: Home.vue
frontend/src/view/docView/: Index.vue
resources/markdown/: ch3_attention-machine.md
src/api/: app.py  schemas.py
src/blog_rag/: __init__.py  config.py  main.py
src/blog_rag/rag_modules/: __init__.py  data_preparation.py  generation_integration.py  index_construction.py  retrieval_optimization.py
tests/: conftest.py
tests/fixtures/data/markdown/: sample.md
tests/test_api/: test_api_app.py
tests/test_blog_rag/: test_data_preparation.py  test_generation_integration.py  test_index_construction.py  test_retrieval_optimization.py
